<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
    	
        <LinearLayout 
	        android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
			android:layout_weight="1"
		     >
	        
            <LinearLayout 
		        android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
		        <TextView
					android:text="@string/jasal"
					android:layout_width="75dp"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
				/>
		
				<EditText
					android:id="@+id/asal"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:inputType="text"
			    	android:hint="@string/casal" 
					android:layout_weight="3">
				</EditText>
			</LinearLayout>
			<LinearLayout 
		        android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
				
			    <TextView
					android:text="@string/jtujuan"
					android:layout_width="75dp"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
				/>
		
				<EditText
					android:id="@+id/tujuan" 
					android:layout_height="wrap_content" 
					android:layout_width="0dp"
					android:inputType="text"
					android:hint="@string/ctujuan"
					android:layout_weight="3">
				</EditText>
			</LinearLayout>
		</LinearLayout>
		
		<Button
		    android:id="@+id/button4"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/gmaps"
		    android:layout_gravity="center" />
		
	</LinearLayout>
	
	<LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
    	<TextView
		        android:layout_width="65dp"
		        android:layout_height="wrap_content"
		        android:text="@string/jkapasitas"
				android:layout_gravity="center" />
		<RadioGroup
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:id="@+id/kuota" >
		        <RadioButton
		            android:id="@+id/no_1"
		            android:text="@string/no_1"
		            android:layout_weight="1" />

		        <RadioButton
		            android:id="@+id/no_2"
		            android:text="@string/no_2"
		            android:layout_weight="1" />

		        <RadioButton
		            android:id="@+id/no_3"
		            android:text="@string/no_3"
		            android:layout_weight="1" />

		        <RadioButton
		            android:id="@+id/no_4"
		            android:text="@string/no_4"
		            android:layout_weight="1" />

		        <RadioButton
		            android:id="@+id/no_5"
		            android:text="@string/no_5"
		            android:layout_weight="1" />

		        <RadioButton
		            android:id="@+id/no_6"
		            android:text="@string/no_6"
		            android:layout_weight="1" />
		</RadioGroup>
	</LinearLayout>
	
	<LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
    	
	    <TextView
			android:text="@string/w_b"
			android:layout_width="75dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
		/>
	    
	    <TextView
			android:id="@+id/w_b"
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:text="@string/w_s"
			android:textSize="22sp"
			android:gravity="center" />
	    <Button
			android:id="@+id/button2"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/setting" />
	</LinearLayout>
	
	<LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
    	
	    <TextView
			android:text="@string/j_k"
			android:layout_width="75dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			/>

		<EditText
			android:id="@+id/j_k" 
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:inputType="text"
			>
		</EditText>
	</LinearLayout>
	
	<Button
		android:id="@+id/button1"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/submit"
	/>
	<!--  
	<LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
    
	</LinearLayout>-->
	
</LinearLayout>
