<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"/>
    
    <ImageView
        android:id="@+id/frag3_icon" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ui3"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
      />

    <TextView
        android:id="@+id/frag3_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about4"
        android:layout_gravity="center"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about1"
        android:layout_gravity="center"/>
	
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about2"
        android:layout_gravity="center"/>
    
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about3"
        android:layout_gravity="center"
        android:layout_weight="2"/>

</LinearLayout>
