<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	>
		<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        
	        <TextView 
				    android:id="@+id/nama"
				    android:layout_width="60dp"
				    android:layout_height="wrap_content"
				    android:textIsSelectable="true"
				    android:textSize="12sp"
				    android:text="@string/jnama"
        			android:gravity="center"
        			android:layout_weight="1"
				/>
				
				<TextView 
				    android:id="@+id/no_hp"
			        android:layout_width="80dp"
			        android:layout_height="wrap_content"
			        android:textIsSelectable="true"
			        android:textSize="12sp"
			        android:text="@string/no_hp1"
        			android:gravity="center"
			        />
				<TextView 
			        android:id="@+id/email"
			        android:layout_width="80dp"
			        android:layout_height="wrap_content"
			        android:textIsSelectable="true"
			        android:textSize="12sp"
			        android:text="@string/email"
        			android:gravity="center"
			        />
				<TextView 
			        android:id="@+id/status"
			        android:layout_width="60dp"
			        android:layout_height="wrap_content"
			        android:textIsSelectable="true"
			        android:textSize="12sp"
			        android:text="@string/jstatus"
        			android:gravity="center"
        			android:layout_weight="2"
			        />
	</LinearLayout>
	
    <TextView
        android:id="@+id/tv11"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/titlebackgroundcolor"
        android:text="@string/spasi" />
</LinearLayout>
