<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    tools:context=".Nebeng" >

    <TextView
        android:id="@+id/jnama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/jnama"
        android:textIsSelectable="true"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/jtujuan"
        android:text="@string/jnama"
        android:textIsSelectable="true"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/jasal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/jnama"
        android:layout_marginLeft="15dp"
        android:text="@string/jasal"
        android:textIsSelectable="true"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/asal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nama"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/jtujuan"
        android:text="@string/jasal"
        android:textIsSelectable="true"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/jtujuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/jasal"
        android:layout_marginLeft="15dp"
        android:text="@string/jtujuan"
        android:textIsSelectable="true"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tujuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/asal"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/jtujuan"
        android:text="@string/jtujuan"
        android:textIsSelectable="true"
        android:textSize="12sp" />
    <TextView
        android:id="@+id/tv11"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/jtujuan"
        android:background="@color/titlebackgroundcolor"
        android:text="@string/spasi" />

</RelativeLayout>